# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2020-05-06 Michael Truog   <mjtruog at protonmail dot com>

    * Improve the messaging integration tests configuration

2020-05-04 Michael Truog   <mjtruog at protonmail dot com>

    * Simplify external service handling of recv_async

2020-05-02 Michael Truog   <mjtruog at protonmail dot com>

    * Add the restart_all service configuration option
      to have the failure of a single process cause
      the restart of all processes (defaults to false)
    * Fix C++ messaging integration test logging output
    * Fix logging of restart T (elapsed time during R, the restart count)
    * Add an iteration counter to the messaging integration tests in
      Go, Haskell, OCaml

2020-04-26 Michael Truog   <mjtruog at protonmail dot com>

    * Simplify the Erlang messaging integration test
      by combining the 4 sequence modules into 1
    * Add an iteration counter to the messaging integration tests in
      C++, Java, Javascript, Perl, PHP, Python, Ruby

2020-04-22 Michael Truog   <mjtruog at protonmail dot com>

    * Reduce the frequency of hibernation in the internal service dispatcher
      process when messages will be received after a short delay
      (when the hibernate service configuration option is used)

2020-04-20 Michael Truog   <mjtruog at protonmail dot com>

    * Do not block the use of recv_async and recv_asyncs in internal services
      that use the service configuration option duo_mode == true.
      More testing determined reliability suffered due to usage of hibernate
      (with the service configuration option hibernate == true),
      making the internal service dispatcher process less responsive during
      the timeout time period.

2020-04-19 Michael Truog   <mjtruog at protonmail dot com>

    * Block the use of recv_async and recv_asyncs in internal services
      that use the service configuration option duo_mode == true