@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2020-05-07 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Fix Python 3.8 compatibility
+    * Fix Haskell GHC 8.10.1 compatibility
+
 2020-05-06 Michael Truog   <mjtruog at protonmail dot com>
 
     * Improve the messaging integration tests configuration
